--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -1,9 +1,10 @@
 ---
-title: "Using MDX"
-description: "Lorem ipsum dolor sit amet"
-pubDate: "Jun 01 2024"
+title: Using MDX
+description: Lorem ipsum dolor sit amet
+pubDate: 2025-08-31
 heroImage: "../../assets/blog-placeholder-5.jpg"
 category: design
+tags: [test4]
 ---
 
 This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
